--- a/saata/src/main/res/values/colors.xml
+++ b/saata/src/main/res/values/colors.xml
@@ -3,4 +3,44 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorBgDark">#242323</color>
+    <color name="colorBtnText">#494949</color>
+    <color name="colorTextGray">#7E7D7D</color>
+    <color name="transparent">#00000000</color>
+    <color name="transparent_bg">#50000000</color>
+    <color name="title">#F2F2F2</color>
+    <color name="black">#000000</color>
+    <color name="black30">#4D000000</color>
+    <color name="black50">#7D000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="whiteAlpha30">#4DFFFFFF</color>
+    <color name="whiteAlpha50">#7DFFFFFF</color>
+    <color name="buttomTextColor">#3D5A83</color>
+    <color name="bannerSelected">#1398E6</color>
+    <color name="bannerNormal">#073C63</color>
+    <color name="titleBg">#4D0C2148</color>
+    <color name="save_src">#3378CF</color>
+    <color name="time_bg">#34609C</color>
+    <color name="text_466796">#466796</color>
+    <color name="info_bg">#153158</color>
+    <color name="pay_bg">#15335D</color>
+    <color name="vipItemText">#6DAEFF</color>
+    <color name="vipItemTextAlpha50">#7F6DAEFF</color>
+    <color name="popupBg">#173967</color>
+    <color name="seekbar_left">#3f6fbf</color>
+    <color name="seekbar_right">#87c1f4</color>
+    <color name="seekbar_thumb">#3378CF</color>
+    <color name="avatar_mask">#102343</color>
+    <color name="progress_dialog_bg">#203c67</color>
+    <color name="progress_left">#87c1f4</color>
+    <color name="progress_right">#3767bf</color>
+    <color name="feed_back_text_333">#333333</color>
+    <color name="feed_back_text_999">#999999</color>
+    <color name="feed_back_text_c7">#C7C7CD</color>
+    <color name="feed_back_bg">#F7F7F7</color>
+    <color name="feed_back_line_F2">#F2F2F2</color>
+    <color name="feed_back_line_E8">#E8E8E8</color>
+    <color name="feed_back_text_gray">#888C9A</color>
+    <color name="feed_back_color_area">#139EFF</color>
+    <color name="bt_confirm">#4576D1</color>
 </resources>
