--- a/saata/src/main/res/layout/activity_main.xml
+++ b/saata/src/main/res/layout/activity_main.xml
@@ -11,10 +11,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"></FrameLayout>
 
+    <Button
+        android:id="@+id/btn_gif"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="转gif" />
+
+    <Button
+        android:id="@+id/btn_trans"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btn_gif"
+        android:text="视频格式转换" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:visibility="gone">
 
         <ImageView
             android:layout_width="match_parent"
