--- a/saata/src/main/res/layout/fragment_home.xml
+++ b/saata/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -21,7 +22,8 @@
                 android:layout_height="190dp"
                 android:layout_marginBottom="15dp"
                 android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp">
+                android:layout_marginRight="15dp"
+                android:visibility="gone">
 
                 <com.regan.saata.view.NestViewPager
                     android:id="@+id/banner_viewpager"
