✅启动页：内容和下方按钮之间的横线的颜色加些透明度，目前太深了
✅首页：第一块和第三块内容 圆角会变形（已截图）
✅首页：第二块内容里面的元素和第一和第三块内容左边没有对齐（已截图）
✅首页：内容左边转gif以及转其他格式的图标不对，以及没有对齐（已截图）

✅视频转音频页：视频在黑色框里面没有居中（已截图）
✅视频转音频页：点击播放按钮，选择系统播放器打开，不用在里面播放了，所有的都一样
✅视频转音频页：点击后退按钮无效
✅视频转音频页：采样率和比特率的设置，默认是显示原始，点击弹窗选项不需要选中默认值；选中一个值后，再次点击出现弹窗，里面的选项和选中的值没有对应起来；所有的设置都有这个问题。
✅视频转音频页：转换失败时提示用户：转换失败，请更换其他参数重试。   （有最高采样率限制的格式，做个最大值限制，比如用户选择了96000，最大限制是44100，就直接用44100好了）
✅视频转音频页：进度条用新给的切图调整下

✅转换成功结果页：黑色区域加上圆角，回首页和分享按钮两边的边距不够，参考设计稿
✅转换成功结果页：对于音频，黑色区域使用默认的设计稿那张图片作为封面，下同。

✅视频转gif页：播放速度这里目前一进去是原始，改成中等

✅视频转其他格式：视频转其他格式和转音频一样，里面的 格式设置 选项不要了。对应的头部标题改下就好；比如之前是视频转音频，改成 视频转mp3 这样的形式。
✅视频转其他格式：比特率和分辨率设置这里，按钮颜色上下反了
✅视频转其他格式：视频比特率 调整为 128K 512K 1M 2M 3M 5M
✅视频转其他格式：视频分辨率 调整为 240p  360p 480p 720p 1080p （该值为宽度值，转换的时候，视频本身比例不变 scale=320:-2）

✅列表页：三个tab的文字改为 视频 gif 音频
✅列表页：视频tab，封面用视频本身的，glide之类的应该可以直接传入视频链接的
✅列表页：视频tab，点击的时候目前是弹出音频播放的，改成视频播放
✅列表页：视频tab，avi wmv格式的视频没有出现在该列表里面
✅列表页：点击菜单出现操作menu，看看箭头能不能和菜单图标对齐，不行的话，把箭头去掉吧
✅列表页：gif tab，封面用gif本身的
✅列表页：gif tab，点击的时候目前是弹出音频播放的
✅列表页：点击右上角删除按钮，确认后，没有删除对应tab的文件

✅我的页：评论 文案 改成 给个好评   目前点击跳转过去的像是搜索，可以用 com.tencent.mm  微信的试试

--- a/saata/src/main/res/drawable/progress_bar_bg.xml
+++ b/saata/src/main/res/drawable/progress_bar_bg.xml
@@ -2,39 +2,16 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@android:id/background">
-        <bitmap android:src="@drawable/progressbar_2" />
-        <!--<shape>-->
-        <!--<corners android:radius="5dip" />-->
-        <!--<gradient-->
-        <!--android:startColor="@color/progress_dialog_bg"-->
-        <!--android:centerColor="@color/progress_dialog_bg"-->
-        <!--android:endColor="@color/progress_dialog_bg" />-->
-        <!--</shape>-->
+        <shape>
+            <solid android:color="@color/progressbar_bg" />
+            <corners android:radius="15dp" />
+        </shape>
     </item>
 
-    <!--<item android:id="@android:id/secondaryProgress">-->
-    <!--<clip>-->
-    <!--<shape>-->
-    <!--<corners android:radius="5dip" />-->
-    <!--<gradient-->
-    <!--android:startColor="#80ffd300"-->
-    <!--android:centerColor="#80ffb600"-->
-    <!--android:endColor="#a0ffcb00" />-->
-    <!--</shape>-->
-    <!--</clip>-->
-    <!--</item>-->
 
     <item android:id="@android:id/progress">
         <clip>
-            <!--<shape>-->
-            <!--<corners android:radius="5dip" />-->
-            <!--<gradient-->
-            <!--android:startColor="@color/progress_left"-->
-            <!--android:endColor="@color/progress_right"-->
-            <!--/>-->
-
-            <!--</shape>-->
-            <bitmap android:src="@drawable/progressbar_1" />
+            <bitmap android:src="@drawable/progress_1" />
         </clip>
     </item>
 </layer-list>
