--- a/saata/src/main/res/layout/activity_success.xml
+++ b/saata/src/main/res/layout/activity_success.xml
@@ -29,16 +29,17 @@
             android:background="@drawable/shape_video_bg"
             app:layout_constraintTop_toBottomOf="@id/title">
 
-            <VideoView
-                android:id="@+id/vv_video"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true" />
+            <!--<VideoView-->
+            <!--android:id="@+id/vv_video"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_centerInParent="true" />-->
 
             <ImageView
                 android:id="@+id/iv_preview"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_centerInParent="true"
                 android:visibility="visible" />
 
             <ImageView
@@ -93,15 +94,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:orientation="horizontal"
             android:layout_marginTop="50dp">
 
             <LinearLayout
                 android:id="@+id/ll_go_home"
-                android:layout_width="135dp"
-                android:layout_height="46dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:layout_marginLeft="25dp"
                 android:gravity="center"
                 android:background="@drawable/success_home_bg">
 
@@ -120,13 +121,18 @@
                     android:text="回首页" />
             </LinearLayout>
 
+            <View
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="0dp" />
+
             <LinearLayout
                 android:id="@+id/ll_share"
-                android:layout_width="135dp"
-                android:layout_height="46dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center"
-                android:layout_marginLeft="50dp"
+                android:layout_marginRight="25dp"
                 android:background="@drawable/success_share_bg">
 
                 <ImageView
