--- a/saata/src/main/res/layout/activity_video_extract.xml
+++ b/saata/src/main/res/layout/activity_video_extract.xml
@@ -29,16 +29,17 @@
             android:background="@drawable/shape_video_bg"
             app:layout_constraintTop_toBottomOf="@id/title">
 
-            <VideoView
-                android:id="@+id/vv_video"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true" />
+            <!--<VideoView-->
+            <!--android:id="@+id/vv_video"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_centerInParent="true" />-->
 
             <ImageView
                 android:id="@+id/iv_preview"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_centerInParent="true"
                 android:visibility="visible" />
 
             <ImageView
