--- a/saata/src/main/res/layout/list_item.xml
+++ b/saata/src/main/res/layout/list_item.xml
@@ -11,9 +11,21 @@
         android:id="@+id/rl_top"
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/list_item_icon">
+        android:background="@drawable/shape_video_bg">
 
+        <com.regan.saata.view.NiceImageView
+            android:id="@+id/iv_cover"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            app:corner_radius="2dp"
+            android:layout_centerInParent="true"
+            android:src="@color/white" />
+        <!--android:scaleType="centerInside"-->
         <ImageView
             android:id="@+id/iv_icon"
             android:layout_width="wrap_content"
