--- a/saata/src/main/res/layout/set_item.xml
+++ b/saata/src/main/res/layout/set_item.xml
@@ -5,8 +5,10 @@
 
     <ImageView
         android:id="@+id/iv_set"
-        android:layout_width="80dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minWidth="80dp"
+        android:minHeight="40dp"
         android:src="@drawable/selector_set_item_bg"
         android:scaleType="centerCrop" />
 
