✅将存放的 “videotools” 文件夹名字 改成 ”视频转音频文件夹”，列表中保存路径那里的文字也跟着改下
✅进度条弹窗：弹框宽度不够，参考设计稿（已截图）

✅视频转音频页：点击播放按钮时，播放按钮不用隐藏掉。下同。
✅视频转音频页：采样率和比特率的设置，默认是显示原始，点击弹窗选项不需要选中默认值，现在是选中了第一个；选中一个值后，再次点击出现弹窗，里面的选项和选中的值没有对应起来；所有的设置都有这个问题。

✅转换成功结果页：点击播放按钮时，播放按钮不用隐藏掉。下同。
✅转换成功结果页：结果是音频时，默认图片上面的空白太多了，参考设计稿（已截图）
✅转换成功结果页：gif的时候不用播放按钮了

✅列表页：从成功结果页点击 我的作品 按钮跳到列表页面时，如果是这个tab的第一个记录时，会不显示（已录屏）
✅列表页：将对应tab的记录清空时，暂无记录的状态没有及时更新出来
✅列表页：点击右上角的删除按钮后，列表清空，切换下tab后或者退出重新进来，数据还是会出现，但文件夹里面已经空了
✅列表页：重命名后，如果文字很短，会变成右边对齐（已截图）

--- a/saata/src/main/res/layout/list_item.xml
+++ b/saata/src/main/res/layout/list_item.xml
@@ -61,12 +61,11 @@
         android:scaleType="center" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_toLeftOf="@id/iv_more"
         android:layout_below="@id/rl_top"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="14dp"
         android:gravity="center_vertical"
         android:orientation="vertical">
 
