--- a/saata/src/main/res/layout/fragment_list.xml
+++ b/saata/src/main/res/layout/fragment_list.xml
@@ -51,7 +51,7 @@
             android:layout_marginLeft="5dp"
             android:textColor="@color/white"
             android:textSize="12sp"
-            android:text="内部存储目录/videotools/transcode" />
+            android:text="内部存储目录/视频转音频文件夹/transcode" />
     </LinearLayout>
     <!--<ScrollView-->
     <!--android:layout_width="match_parent"-->
