--- a/saata/src/main/res/layout/activity_success.xml
+++ b/saata/src/main/res/layout/activity_success.xml
@@ -24,7 +24,7 @@
         <RelativeLayout
             android:id="@+id/rl_video"
             android:layout_width="match_parent"
-            android:layout_height="220dp"
+            android:layout_height="wrap_content"
             android:layout_margin="2dp"
             android:background="@drawable/shape_video_bg"
             app:layout_constraintTop_toBottomOf="@id/title">
@@ -38,8 +38,9 @@
             <ImageView
                 android:id="@+id/iv_preview"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
                 android:visibility="visible" />
 
             <ImageView
@@ -54,24 +55,26 @@
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="30dp"
+                android:layout_below="@id/iv_video_start"
+                android:layout_marginTop="100dp"
                 android:layout_marginLeft="15dp"
                 android:textColor="@color/white"
                 android:textSize="15sp"
                 android:textStyle="bold"
-                android:text="video name" />
+                android:text="video name"
+                android:visibility="invisible" />
 
             <TextView
                 android:id="@+id/tv_content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
+                android:layout_below="@id/tv_name"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="15dp"
                 android:textColor="@color/white"
                 android:textSize="12sp"
-                android:text="video content" />
+                android:text="video content"
+                android:visibility="invisible" />
         </RelativeLayout>
 
         <ImageView
